Project

General

Profile

Actions

Bug #51610

closed

Fix non POSIX use of sigval_t

Added by Willem Jan Withagen almost 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

FreeBSD does not have signal_t.
Linux specifies also to use sigval as POSIX compliant.

```
In file included from /home/jenkins/workspace/ceph-master-compile/src/rgw/rgw_rados.h:30:
/home/jenkins/workspace/ceph-master-compile/src/rgw/rgw_d3n_cacherequest.h:79:40: error: unknown type name 'sigval_t'; did you mean 'sigval'?
static void libaio_cb_aio_dispatch(sigval_t sigval) {
^~~~~~
sigval
/usr/include/sys/signal.h:171:7: note: 'sigval' declared here
union sigval {
^
1 error generated.
```

Actions #1

Updated by Mark Kogan almost 3 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF