rgw: Use signaling compatible with POSIX

FreeBSD does not have signal_t.
Linux specifies also to use `sigval` as POSIX compliant.

tracker: https://tracker.ceph.com/issues/51610
fixes: https://github.com/ceph/ceph/pull/36266
Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>